umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@ions_hg+2_dimer.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: ions
atom_typing:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{Hg+/5v1}"
      - "{Hg+/5v1}"
    bonds:
      - "-"
counts:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{Hg+v1}"
      - "{Hg+v1}"
    bonds:
      - "-"
